force-app/main/default/objects/GsFeedback__c/GsFeedback__c.object-meta.xml
<CustomObject>
    <description>Object for any kind of feedback and requests</description>
    <label>GoalSetter Feedback</label>
    <nameField>
        <label>GoalSetter Feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GoalSetter Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>