force-app/main/default/objects/GsFeedback__c/fields/GsComment__c.field-meta.xml
<CustomField>
    <fullName>GsComment__c</fullName>
    <description>Internal Comment</description>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>