force-app/main/default/objects/GsFeedback__c/fields/GsDescription__c.field-meta.xml
<CustomField>
    <fullName>GsDescription__c</fullName>
    <description>This field can be entered manually by the user in the “Send Feedback” flow. If the feedback type is “User Request”, the user comment gets appended to an automatically generated text block consisting of Firstname, Surname, email and CWID of the user.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>