force-app/main/default/objects/GsFeedback__c/fields/GsStatus__c.field-meta.xml
<CustomField>
    <fullName>GsStatus__c</fullName>
    <description>The status of the issue/feedback</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Doing</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>