force-app/main/default/objects/GsFeedback__c/fields/GsSubject__c.field-meta.xml
<CustomField>
    <fullName>GsSubject__c</fullName>
    <description>The subject of the issue/feedback</description>
    <label>Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>