force-app/main/default/objects/GsFeedback__c/fields/GsType__c.field-meta.xml
<CustomField>
    <fullName>GsType__c</fullName>
    <description>The type of the issue/feedback (user request, issue, data maintenance, ...)</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issue/Bug</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Access Request</fullName>
            </value>
            <value>
                <fullName>Data maintenance</fullName>
            </value>
            <value>
                <fullName>Praise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>