force-app/main/default/objects/GsFeedback__c/listViews/GsFeedback_GsFeedback.listView-meta.xml
<ListView>
    <fullName>GsFeedback_GsFeedback</fullName>
    <filterScope>Queue</filterScope>
    <label>GoalSetter Feedback</label>
    <queue>GsFeedback</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>