force-app/main/default/objects/GsFeedback__c/listViews/GsUserRequests_GsFeedback.listView-meta.xml
<ListView>
    <fullName>GsUserRequests_GsFeedback</fullName>
    <filterScope>Queue</filterScope>
    <label>GoalSetter User Requests</label>
    <queue>GsUserRequests</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>